style.css
@font-face {
    font-family: 'Bespoke-Bold';
    src: url(BespokeSans-Bold.ttf);
}

* {
    font-family: 'Bespoke-Bold';
    color: white;
}

*::selection {
    background-color: coral;
    color: black;
}

head {
    display: none;
}

body {
    background-color: black;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* #title {
} */

main {
    background-color: aliceblue;
    min-width: 300px;
    padding: 10px;
    border-radius: 12px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 40px;
    padding: 0;
    margin: 0;
}

#bottom > h3 {
    color: dimgray;
    padding: 0;
    margin: 0;
}

#continue {
    width: fit-content;
    box-sizing: content-box;
    height: 20px;
    padding: 7px;
    background-color: MediumBlue;
    border: 0;
    border-bottom: 5px solid navy;
    border-radius: 7px;
    cursor: pointer;
}

#continue:not(:disabled):hover {
    background-color: #3131ff;
    border-bottom-width: 3px;
    margin-top: 2px;
}

#continue:disabled {
    background-color: gray;
    border-color: #525252;
    border-bottom-width: 3px;
    margin-top: 2px;
}

#webcam {
    width: 400px;
    aspect-ratio: calc(4/3);
    border-radius: 5px;
    background-color: dimgray;
}

#indicator {
    position: absolute;
    height: 40px;
    width: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid white;
    margin: 0 5px 5px 0;
    mask-image: linear-gradient(to right, transparent 5%, black 45%, black 55%, transparent 95%);
}

i {
    position: absolute;
    color: #ffffff66;
    /* background-color: #3131ff71; */
    padding: 5px;
    font-size: 18px;
    transition: 400ms;
}

.in-queue {
    margin-left: 100px;
}

.next-up {
    margin-left: 60px;
}

.passed {
    margin-right: 100px;
    color: #2469ff66;
}

.prev {
    margin-right: 60px;
    color: #2469ff66;
}

.main {
    font-size: 30px;
    color: white;
}

